adds sankey endpoint
