# backend/src/modules/finances/presentation/router.py
@@ -6,7 +6,13 @@ from fastapi.responses import JSONResponse
 from src.modules.finances.application.transaction_service import TransactionService
 
 from ..domain.transaction import Transaction
-from .types import ListTransactionsResponseDTO, MaintainTransactionRequestDTO
+from .types import (
+    GetSankeyResponseDTO,
+    ListTransactionsResponseDTO,
+    MaintainTransactionRequestDTO,
+    SankeyNodeDTO,
+    SankeyNodeTargetDTO,
+)
 
 
 class FinancesRouter(APIRouter):
@@ -62,6 +68,14 @@ class FinancesRouter(APIRouter):
             methods=["DELETE"],
         )
 
+        self.add_api_route(
+            "/sankey",
+            self.get_sankey,
+            response_class=JSONResponse,
+            response_model=GetSankeyResponseDTO,
+            methods=["GET"],
+        )
+
     def _list_transactions(self) -> ListTransactionsResponseDTO:
         return ListTransactionsResponseDTO.from_domain(self.service.list_())
 
@@ -89,3 +103,76 @@ class FinancesRouter(APIRouter):
         self.service.delete(transaction_id)
 
         return {"message": f"Transaction {transaction_id} deleted"}
+
+    def get_sankey(self):
+        return GetSankeyResponseDTO(
+            nodes=[
+                SankeyNodeDTO(
+                    id="salario",
+                    label="Salário",
+                    targets=[
+                        SankeyNodeTargetDTO(
+                            id="entradas",
+                            value=4800,
+                        )
+                    ],
+                ),
+                SankeyNodeDTO(
+                    id="va",
+                    label="VA",
+                    targets=[
+                        SankeyNodeTargetDTO(
+                            id="entradas",
+                            value=600,
+                        )
+                    ],
+                ),
+                SankeyNodeDTO(
+                    id="entradas",
+                    label="Entradas",
+                    targets=[
+                        SankeyNodeTargetDTO(
+                            id="aluguel",
+                            value=1363,
+                        ),
+                        SankeyNodeTargetDTO(
+                            id="contas",
+                            value=350,
+                        ),
+                        SankeyNodeTargetDTO(
+                            id="terapia",
+                            value=520,
+                        ),
+                    ],
+                ),
+                SankeyNodeDTO(
+                    id="contas",
+                    label="Contas",
+                    targets=[
+                        SankeyNodeTargetDTO(
+                            id="luz",
+                            value=150,
+                        ),
+                        SankeyNodeTargetDTO(
+                            id="internet",
+                            value=200,
+                        ),
+                    ],
+                ),
+                SankeyNodeDTO(
+                    id="aluguel",
+                    label="Aluguel",
+                    targets=[],
+                ),
+                SankeyNodeDTO(
+                    id="luz",
+                    label="Luz",
+                    targets=[],
+                ),
+                SankeyNodeDTO(
+                    id="internet",
+                    label="Internet",
+                    targets=[],
+                ),
+            ],
+        )
